--- a/euphoria-front/src/layout/navbar/global.scss
+++ b/euphoria-front/src/layout/navbar/global.scss
@@ -8,3 +8,11 @@ nav {
         background-color: inherit !important;
     }
 }
+
+.nav {
+    .listLeft {
+        .active {
+            font-weight: 600 !important;
+        }
+    }
+}
