--- a/euphoria-front/src/layout/navbar/authnavbar.module.scss
+++ b/euphoria-front/src/layout/navbar/authnavbar.module.scss
@@ -1,4 +1,4 @@
-.nav {
+nav {
     width: 100%;
     height: 10vh;
     padding-left: 80px;
@@ -10,7 +10,6 @@
     z-index: 5;
     border-bottom: 1px solid gray;
     overflow: hidden;
-    position: fixed;
 
     &>img {
         width: 100px;
@@ -47,46 +46,36 @@
         }
     }
 
-    .listLeft {
+    .list {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 30px;
+        gap: 20px;
+
+        :nth-child(1) {
+            margin-right: 50px;
+        }
 
         &>a {
-            color: black;
-        }
-
-        &>a.active {
-            font-weight: 600;
-        }
-    }
-
-    .listRight {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-
-        .icon {
-            width: 40px;
+            min-width: 120px;
             height: 40px;
+            border: 1px solid gray;
+            border-radius: 10px;
+            background-color: white;
+            color: #8A33FD;
+            cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: #F6F6F6;
-            border-radius: 8px;
-
-            &>img {
-                width: 15px;
-                height: 15px;
-            }
+            font-size: 14px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
     }
 }
 
 @media only screen and (max-width:890px) {
-    .nav {
+    nav {
         .input {
             display: none;
         }
@@ -94,7 +83,7 @@
 }
 
 @media only screen and (max-width:600px) {
-    .nav {
+    nav {
         padding-left: 20px;
         padding-right: 20px;
 
@@ -113,7 +102,7 @@
 }
 
 @media only screen and (max-width:500px) {
-    .nav {
+    nav {
         .list {
             &>a {
                 display: none;
