--- a/euphoria-front/src/components/Auth/verification/verification.module.scss
+++ b/euphoria-front/src/components/Auth/verification/verification.module.scss
@@ -82,7 +82,7 @@
     width: 167px;
     height: 54px;
     font-size: 16px;
-    font-weight: 500px;
+    font-weight: 500;
     color: var(--color-white, #fff);
     background-color: var(--color-aztecPurple, #8a33fd);
     border-radius: 8px;
