--- a/euphoria-front/src/layout/navbar/navbar.module.scss
+++ b/euphoria-front/src/layout/navbar/navbar.module.scss
@@ -1,127 +1,182 @@
-.nav {
-    width: 100%;
-    height: 10vh;
-    padding-left: 80px;
-    padding-right: 80px;
-    background-color: white;
+nav {
+  width: 100%;
+  height: 10vh;
+  padding-left: 80px;
+  padding-right: 80px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 5;
+  border-bottom: 1px solid gray;
+  overflow: hidden;
+
+  &>img {
+    width: 100px;
+  }
+
+  .input {
+    min-width: 180px;
+    height: 40px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    z-index: 5;
-    border-bottom: 1px solid gray;
-    overflow: hidden;
-    position: fixed;
+    justify-content: center;
+    background-color: #efefef;
+    border-radius: 10px;
+    color: black;
+    padding-left: 20px;
 
-    &>img {
-        width: 100px;
+    &>i {
+      color: gray;
+      font-size: 14px;
     }
 
-    .input {
-        min-width: 180px;
-        height: 40px;
+    &>input {
+      padding-left: 10px;
+      padding-right: 20px;
+      border: none;
+      outline: none;
+      background-color: #efefef;
+      color: black;
+      border-radius: 10px;
+    }
+
+
+    &>input::placeholder {
+      font-size: 12px;
+    }
+  }
+
+  .list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+
+    :nth-child(1) {
+      margin-right: 50px;
+    }
+
+    &>a {
+      min-width: 120px;
+      height: 40px;
+      border: 1px solid gray;
+      border-radius: 10px;
+      background-color: white;
+      color: #8a33fd;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 14px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+}
+
+@media only screen and (max-width: 890px) {
+  nav {
+    &>input {
+      display: none;
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  nav {
+    padding-left: 20px;
+    padding-right: 20px;
+
+    .list {
+      gap: 10px;
+
+      :nth-child(1) {
+        margin-right: 10px;
+      }
+
+      &>a {
+        padding: 0;
+      }
+
+      .list {
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #efefef;
-        border-radius: 10px;
-        color: black;
-        padding-left: 20px;
+        gap: 20px;
 
-        &>i {
-            color: gray;
-            font-size: 14px;
+        :nth-child(1) {
+          margin-right: 50px;
         }
-
-        &>input {
-            padding-left: 10px;
-            padding-right: 20px;
-            border: none;
-            outline: none;
-            background-color: #efefef;
-            color: black;
-            border-radius: 10px;
-        }
-
-        &>input::placeholder {
-            font-size: 12px;
-        }
-    }
-
-    .listLeft {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 30px;
 
         &>a {
-            color: black;
+          min-width: 120px;
+          height: 40px;
+          border: 1px solid gray;
+          border-radius: 10px;
+          background-color: white;
+          color: #8A33FD;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 14px;
+          padding-left: 20px;
+          padding-right: 20px;
         }
 
-        &>a.active {
-            font-weight: 600;
-        }
+      }
     }
+  }
+}
 
-    .listRight {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-
-        .icon {
-            width: 40px;
-            height: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #F6F6F6;
-            border-radius: 8px;
-
-            &>img {
-                width: 15px;
-                height: 15px;
-            }
-        }
+@media only screen and (max-width: 500px) {
+  nav {
+    .list {
+      &>a {
+        display: none;
+      }
     }
+  }
 }
 
 @media only screen and (max-width:890px) {
-    .nav {
-        .input {
-            display: none;
-        }
+  nav {
+    .input {
+      display: none;
     }
+  }
 }
 
 @media only screen and (max-width:600px) {
-    .nav {
-        padding-left: 20px;
-        padding-right: 20px;
+  nav {
+    padding-left: 20px;
+    padding-right: 20px;
 
-        .list {
-            gap: 10px;
+    .list {
+      gap: 10px;
 
-            :nth-child(1) {
-                margin-right: 10px;
-            }
+      :nth-child(1) {
+        margin-right: 10px;
+      }
 
-            &>a {
-                padding: 0;
-            }
-        }
+      &>a {
+        padding: 0;
+      }
     }
+  }
 }
 
 @media only screen and (max-width:500px) {
-    .nav {
-        .list {
-            &>a {
-                display: none;
-            }
-        }
-
-        .input {
-            display: none;
-        }
+  nav {
+    .list {
+      &>a {
+        display: none;
+      }
     }
+
+    .input {
+      display: none;
+    }
+  }
 }
