--- a/euphoria-front/src/components/Home/NewArrival/NewArrival.module.scss
+++ b/euphoria-front/src/components/Home/NewArrival/NewArrival.module.scss
@@ -10,15 +10,22 @@
   --color-aztecPurple: #8a33fd;
 }
 
+@mixin mobile {
+  @media (max-width: 600px) {
+    @content;
+  }
+}
+
 .container {
   width: 100%;
-  height: 450px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
-  // background-color: yellow;
-  & > .context {
+  gap: 20px;
+  margin-bottom: 50px;
+
+  &>.context {
     width: 80%;
     height: 30px;
     display: flex;
@@ -27,16 +34,21 @@
     font-weight: 600;
     font-size: 34px;
     letter-spacing: 2%;
-    color: var(--color-charcoalGrey,#3c4242);
-    ;
-    & > .line {
+    color: var(--color-charcoalGrey);
+
+    @include mobile {
+      width: 90%;
+    }
+
+    &>.line {
       width: 6px;
       height: 100%;
       border-radius: 10px;
-      background-color: var(--color-aztecPurple, #8a33fd);
+      background-color: var(--color-aztecPurple);
     }
   }
-  & > div {
+
+  &>div {
     width: 80%;
     height: 70%;
   }
@@ -50,15 +62,18 @@
   display: flex !important;
   justify-content: space-around;
   flex-direction: column;
-  & > img {
+  position: relative;
+
+  &>img {
     width: 100%;
     height: 262px;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 10px;
   }
-  & > p {
+
+  &>p {
     font-weight: 700;
     font-size: 20px;
     letter-spacing: 1%;
   }
 }
-
