--- a/euphoria-front/src/layout/footer/footer.module.scss
+++ b/euphoria-front/src/layout/footer/footer.module.scss
@@ -1,4 +1,4 @@
-.footer{
+.footer {
     width: 100%;
     min-height: 70vh;
     background-color: #3C4242;
@@ -6,55 +6,60 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    &>.footerInside{
-        width: 80%;
+
+    &>.footerInside {
+        width: 77%;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 2fr;
+        column-gap: 30px;
         color: white;
-        margin: 40px;
-    &>.gridColumns{
-        height: 35vh;
-        &>h2{
-            margin-bottom: 20px;
-        }
-        &>ul>li{
-            margin-bottom: 15px;
-            font-size: 15px;
-            color:  #F6F6F6;
-        }
-    }
-    }
-    &>.socials{
-       width: 80%;
-       height: 20vh;
-       display: flex;
-       justify-content: space-between;
-       align-items: center;
-       &>.socials1{
-        width: 180px;
-        height: 50px;
-        &>img{
-            margin-right: 7px;
-        }
-       }
-       &>.socials2{
-        width: 430px;
-        height: 150px;
-        &>h3{
-            margin-bottom: 20px;
-            color: white;
-        }
-        &>div{
-            display: flex;
-            &>img{
-                width: 160px;
-                height: 55px;
-                margin-right: 13px;
+        margin-top: 40px;
+        margin-bottom: 20px;
+
+        &>.gridColumns {
+            &>h2 {
+                margin-bottom: 20px;
+            }
+
+            &>p {
+                margin-bottom: 15px;
+                font-size: 15px;
+                color: #F6F6F6;
             }
         }
-       }
     }
-    &>.categories{
+
+    &>.socials {
+        width: 76%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &>.socials1 {
+            &>img {
+                margin-right: 7px;
+            }
+        }
+
+        &>.socials2 {
+            &>h3 {
+                margin-bottom: 20px;
+                color: white;
+            }
+
+            &>div {
+                display: flex;
+
+                &>img {
+                    width: 175px;
+                    height: 55px;
+                    margin-right: 13px;
+                }
+            }
+        }
+    }
+
+    &>.categories {
         width: 80%;
         height: 10vh;
         border: 1px solid;
@@ -67,17 +72,115 @@
         justify-content: space-between;
         padding: 0 70px;
         margin-bottom: 10px;
-        margin-top: 20px;
-        &>span{
+        margin-top: 30px;
+
+        &>span {
             color: white;
             font-size: 20px;
             font-weight: 500;
         }
     }
-    &>.copyright{
-        margin-bottom: 40px;
-        margin-top: 40px;
+
+    &>.copyright {
+        margin: 30px 0 30px;
         color: white;
         font-size: 15px;
+    }
+}
+
+@media only screen and (max-width: 916px) {
+    .footer {
+        &>.footerInside {
+            row-gap: 30px;
+            grid-template-columns: 1fr 1fr;
+
+            &>.gridColumns {
+                &>h2 {
+                    font-size: 15px;
+                }
+            }
+        }
+
+        &>.socials {
+            margin-top: 25px;
+
+            &>.socials2 {
+                &>div {
+                    &>img {
+                        width: 140px;
+                        height: 60px;
+                    }
+                }
+            }
+        }
+
+        &>.copyright {
+            font-size: 14px;
+        }
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .footer {
+        &>.footerInside {
+            grid-template-columns: 1fr;
+        }
+
+        &>.socials {
+            &>.socials2 {
+                &>div {
+                    &>img {
+                        width: 90px;
+                        height: 50px;
+                    }
+                }
+            }
+        }
+
+        &>.copyright {
+            font-size: 12px;
+        }
+    }
+
+}
+
+@media only screen and (max-width: 377px) {
+    .footer {
+        &>.footerInside {
+            row-gap: 30px;
+            grid-template-columns: 1fr;
+
+            &>.gridColumns {
+                &>h2 {
+                    font-size: 16px;
+                }
+
+                &>p {
+                    font-size: 14px;
+                }
+            }
+        }
+
+        &>.socials {
+            &>.socials2 {
+                &>div {
+                    &>img {
+                        width: 75px;
+                        height: 35px;
+                    }
+                }
+            }
+        }
+
+        &>.copyright {
+            font-size: 9px;
+        }
+
+        &>.categories {
+            &>span {
+                font-size: 14px;
+                margin-right: 15px;
+            }
+        }
     }
 }
