--- a/euphoria-front/src/components/Auth/sign in/signin.module.scss
+++ b/euphoria-front/src/components/Auth/sign in/signin.module.scss
@@ -110,8 +110,9 @@
                 border-radius: 10px;
                 padding-left: 20px;
                 font-size: 16px;
-                outline-color: #8a33fd;
+                outline-color: #8a33fd !important;
                 padding-right: 20px;
+                background-color: white;
             }
 
             a {
