--- a/euphoria-front/src/components/Home/FashionSection/FashionSection.module.scss
+++ b/euphoria-front/src/components/Home/FashionSection/FashionSection.module.scss
@@ -11,49 +11,56 @@
 
 .container {
   width: 100%;
-  height: 800px;
+  height: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
-  & > .row {
-    width: 80%;
-    height: 70%;
+
+  &>.row {
+    width: 80% !important;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    & > div {
+
+    &>div {
       width: 50%;
       height: 100%;
       background-size: cover;
       background-repeat: no-repeat;
     }
-    & > .leftrow {
+
+    &>.leftrow {
       background-image: url("../../../../public/img/fashion.png");
       border-radius: 0 0 0 14px;
       display: flex;
       align-items: center;
       justify-content: center;
-      & > .textContent {
+
+      &>.textContent {
         width: 85%;
         height: 55%;
         display: flex;
         justify-content: center;
         gap: 15px;
         flex-direction: column;
-        & > h4 {
+
+        &>h4 {
           font-size: 34px;
           font-weight: 800;
           letter-spacing: 1px;
           color: var(--color-white, #fff);
         }
-        & > p {
+
+        &>p {
           font-size: 20px;
           font-weight: 300;
           letter-spacing: 1px;
           color: var(--color-white, #fff);
         }
-        & > a {
+
+        &>a {
           width: 168px;
           height: 46px;
           border-radius: 8px;
@@ -66,7 +73,8 @@
         }
       }
     }
-    & > .rightrow {
+
+    &>.rightrow {
       background-image: url("../../../../public/img/fashionpctr.png");
       border-radius: 0 0 14px 0;
     }
@@ -77,6 +85,7 @@
   .textContent {
     height: 100%;
   }
+
   .rightrow {
     border-radius: 0 14px 14px 0 !important;
   }
@@ -85,15 +94,19 @@
 @media only screen and (max-width: 1200px) {
   .row {
     width: 85% !important;
-    & > .leftrow > .textContent {
+
+    &>.leftrow>.textContent {
       height: 100% !important;
-      & > h4 {
+
+      &>h4 {
         font-size: 29px;
       }
-      & > p {
+
+      &>p {
         font-size: 17px;
       }
-      & > a {
+
+      &>a {
         font-size: 16px !important;
       }
     }
@@ -103,15 +116,19 @@
 @media only screen and (max-width: 950px) {
   .row {
     width: 90% !important;
-    & > div {
+
+    &>div {
       background-size: contain;
       background-position: 50% 50% !important;
+
       h4 {
         font-size: 26px !important;
       }
+
       p {
         font-size: 16px !important;
       }
+
       a {
         width: 150px !important;
         height: 40px !important;
@@ -124,11 +141,13 @@
 @media only screen and (max-width: 600px) {
   .container {
     height: 900px !important;
+
     .row {
       width: 90% !important;
       height: 100% !important;
       flex-direction: column !important;
-      & > div {
+
+      &>div {
         width: 100% !important;
         border-radius: 14px !important;
         background-position: 0% 0% !important;
@@ -136,12 +155,14 @@
     }
   }
 }
+
 @media only screen and (max-width: 480px) {
   .container {
-    & > .row {
+    &>.row {
       width: 90% !important;
       height: 100% !important;
-      & > div {
+
+      &>div {
         background-position: 50% 50% !important;
       }
     }
