--- a/euphoria-front/src/components/Home/SaleProducts/saleproduct.module.scss
+++ b/euphoria-front/src/components/Home/SaleProducts/saleproduct.module.scss
@@ -75,6 +75,7 @@
 
             @include tablet {
                 min-height: 230px !important;
+                background-image: none !important;
             }
 
             @include mobile {
