--- a/euphoria-front/src/layout/footer/footer.module.scss
+++ b/euphoria-front/src/layout/footer/footer.module.scss
@@ -33,6 +33,25 @@
         width: 76%;
         display: flex;
         justify-content: space-between;
+        align-items: end;
+
+        &>.gridColumns {
+            &>h2 {
+                margin-bottom: 20px;
+            }
+
+            &>p {
+                margin-bottom: 15px;
+                font-size: 15px;
+                color: #F6F6F6;
+            }
+        }
+    }
+
+    &>.socials {
+        width: 76%;
+        display: flex;
+        justify-content: space-between;
         align-items: center;
 
         &>.socials1 {
@@ -58,34 +77,34 @@
             }
         }
     }
+}
 
-    &>.categories {
-        width: 80%;
-        height: 10vh;
-        border: 1px solid;
-        border-top-color: #BEBCBD;
-        border-bottom-color: #BEBCBD;
-        border-right-color: transparent;
-        border-left-color: transparent;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 70px;
-        margin-bottom: 10px;
-        margin-top: 30px;
+.categories {
+    width: 80%;
+    height: 10vh;
+    border: 1px solid;
+    border-top-color: #BEBCBD;
+    border-bottom-color: #BEBCBD;
+    border-right-color: transparent;
+    border-left-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 70px;
+    margin-bottom: 10px;
+    margin-top: 30px;
 
-        &>span {
-            color: white;
-            font-size: 20px;
-            font-weight: 500;
-        }
-    }
-
-    &>.copyright {
-        margin: 30px 0 30px;
+    &>span {
         color: white;
-        font-size: 15px;
+        font-size: 20px;
+        font-weight: 500;
     }
+}
+
+.copyright {
+    margin: 30px 0 30px;
+    color: white;
+    font-size: 15px;
 }
 
 @media only screen and (max-width: 916px) {
