--- a/euphoria-front/src/layout/navbar/homenavbar.module.css
+++ b/euphoria-front/src/layout/navbar/homenavbar.module.css
@@ -1,6 +1,6 @@
 .nav {
   padding: 0;
-  width: 80%;
+  width: 90%;
   margin: auto;
   border: none;
   display: flex;
@@ -61,8 +61,8 @@ input::placeholder {
 }
 
 .list {
-  width: 45%;
-  gap: 5px;
+  width: 40%;
+  gap: 10px;
 }
 
 .list a {
@@ -78,7 +78,7 @@ input::placeholder {
 
 .elements {
   display: flex;
-  gap: 3px;
+  gap: 10px;
   justify-content: space-between;
 }
 
@@ -88,24 +88,30 @@ input::placeholder {
   height: 40px;
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 0 10px;
   background: #f6f6f6;
 }
-.elem a {
+
+.elem {
   color: #3c4242;
 }
+
+
 .resp {
   display: flex;
   flex-direction: row;
   width: 80%;
   justify-content: space-between;
   align-items: center;
+  gap: 5px;
 }
 
 .menu {
   display: none;
   cursor: pointer;
 }
+
 @media only screen and (max-width: 960px) {
   .resp {
     flex-direction: column;
