--- a/euphoria-front/src/components/Auth/CreatePassword/createpassword.module.scss
+++ b/euphoria-front/src/components/Auth/CreatePassword/createpassword.module.scss
@@ -33,7 +33,7 @@ form{
     border-radius: 8px;
     border: 1px solid #3C4242;
 }
-button{
+.reset_password{
     margin-top: 48px;
     width: 167px;
     height: 54px;
