--- a/euphoria-front/src/components/ProductList/ListCards/ListCards.module.scss
+++ b/euphoria-front/src/components/ProductList/ListCards/ListCards.module.scss
@@ -1,5 +1,150 @@
-.container{
-    background-color:red;
-    height:100dvh;
-    width:100%;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
+* {
+  font-family: "Open Sans", sans-serif;
+}
+
+:root {
+  --color-charcoalGrey: #3c4242;
+  --color-white: #fff;
+  --color-whiteSmoke: #f6f6f6;
+  --color-aztecPurple: #8a33fd;
+    --color-mediumGrey: #807d7e;
+  --color-cottonSeed: #bebcbd;
+  --color-charcoalGrey: #3f4646;
+}
+
+.container {
+  width: 100%;
+  height: 1900px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // padding-top: 80px;
+  & > .row {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    // background-color: yellow;
+    & > .lCol {
+      width: 23%;
+      height: 70%;
+      border-radius: 0px 0px 2px 2px;
+      border: 0.5px;
+      border-style: none solid solid solid;
+      border-color: var(--color-cottonSeed);
+      & > .filter {
+        height: 60px;
+        border-bottom: 0.5px solid var(--color-cottonSeed);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
+        & > p {
+          font-size: 22px;
+          font-weight: 500;
+          letter-spacing: 0.02em;
+          color: var(--color-mediumGrey);
+
+        }
+        &>.lists{
+          width: 100%;
+          &>li{
+            width: 100%;
+            height: 30px;
+            background-color: pink;
+            &>div{
+              padding: 20px !important;
+            }
+          }
+        }
+      }
+    }
+    & > .rCol {
+      width: 77%;
+      margin-top: 40px;
+      //   height: 80%;
+      display: flex;
+      flex-direction: column;
+      //   background-color: pink;
+      & > .headCol {
+        width: 95%;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: auto;
+        // background-color: aqua;
+        margin-bottom: 30px;
+        & > h6 {
+          font-size: 22px;
+          font-weight: 600;
+          color: var(--color-charcoalGrey);
+        }
+        & > .colHead {
+          display: flex;
+          gap: 20px;
+          font-weight: 600;
+          font-size: 22px;
+          & > .new {
+            color: var(--color-aztecPurple);
+          }
+          & > .recommend {
+            color: var(--color-charcoalGrey);
+          }
+        }
+      }
+      & > .cards {
+        width: 95%;
+        height: 85%;
+        margin: auto;
+        display: flex;
+        // gap: 15px;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        & > .card {
+          color: var(--color-charcoalGrey);
+
+          width: 282px;
+          height: 450px;
+          border-radius: 12px;
+          //   background-color: yellow;
+          & > img {
+            width: 100%;
+            object-fit: contain;
+          }
+          & > .cardContext {
+            width: 100%;
+            height: 60px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            & > div {
+              & > .cardTitle {
+                font-size: 16px;
+                font-weight: 600;
+                padding-bottom: 5px;
+              }
+              & > .cardSubtitle {
+                font-size: 14px;
+                font-weight: 500;
+              }
+            }
+            & > .cardPrice {
+              width: 82.31px;
+              height: 36.58px;
+              border-radius: 9px;
+              background: var(--color-whiteSmoke);
+              text-align: center;
+              line-height: 36.58px;
+              font-size: 14px;
+              font-weight: 600;
+            }
+          }
+        }
+      }
+    }
+  }
 }
