--- a/euphoria-front/src/layout/footer/footer.module.scss
+++ b/euphoria-front/src/layout/footer/footer.module.scss
@@ -77,7 +77,22 @@
             }
         }
     }
+    &>.categories {
+        width: 80%;
+        height: 10vh;
+        border: 1px solid;
+        border-top-color: #BEBCBD;
+        border-bottom-color: #BEBCBD;
+        border-right-color: transparent;
+        border-left-color: transparent;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 70px;
+        margin-bottom: 10px;
+        margin-top: 30px;
 }
+
 
 .categories {
     width: 80%;
@@ -202,4 +217,5 @@
             }
         }
     }
+}
 }
