--- a/euphoria-front/src/components/ProductDetail/productdetail.module.scss
+++ b/euphoria-front/src/components/ProductDetail/productdetail.module.scss
@@ -1,207 +1,5 @@
 .pdContainer{
     width: 100%;
-    height: 130vh;
-    padding-top: 60px;
-    &>.upContainer{
-        display: flex;
-        width: 100%;
-        height: 100vh;
-        margin-bottom: 30px;
-        &>.pdImages{
-            width: 50%;
-            height: 90vh;
-            display: flex;
-            &>.pdLeftImg{
-            width: 40%;
-            height: 97vh;
-            &>.pdSliderContainer{
-                width: 100%;
-                height: 70vh;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin-top: 50px;
-                &>.pdsldr{
-                width: 70px;
-                height: 40vh;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                &>.pdSlider{
-                width: 300px;
-                height: 40vh;
-                }
-                }
-            }
-            }
-            &>.pdRightImg{
-                width: 60%;
-                height: 97vh;
-                &>.pdrImg{
-                    width: 100%;
-                    height: 97vh;
-                }
-            }
-        }
-        &>.pdTexts{
-            width: 50%;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            &>.pdInTexts{
-                width: 80%;
-                height: 88vh;
-                &>.pdtextlinks{
-                    display: flex;
-                    align-items: center;
-                    gap: 10px;
-                    color: #807D7E;
-                    margin-bottom: 30px;
-                }
-                &>.pdInTextsp{
-                    font-size: 30px;
-                    line-height: 35px;
-                    font-weight: 600;
-                }
-            &>.pdStarsComments{
-                display: flex;
-                align-items: center;
-                gap: 25px;
-                margin-top: 30px;
-             &>.pdStars{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 7px;
-             }
-             &>.pdComments{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 7px;
-             }
-            }
-            &>.pdsizes{
-                width: 40%;
-                height: 10vh;
-                margin-top: 30px;
-                &>.inpdsizes{
-                 display: flex;
-                 align-items: center;
-                 gap: 15px;
-                 &>.arrowandsp{
-                    display: flex;
-                    align-items: center;
-                    gap: 4px;
-                 }
-                }
-
-                &>.sizes{
-                    display: flex;
-                    gap: 10px;
-                    margin-top: 20px;
-                }
-                &>.sizes{
-                    &>input{
-                        width: 25%;
-                        height: 5vh;
-                        background-color: white;
-                        color: black;
-                        border: 1px solid grey;
-                        border-radius: 7px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-size: 14px;
-                        cursor: pointer;
-                        &:hover{
-                            background-color: black;
-                            color: white;
-                        }
-                        &:checked{
-                            background-color: black;
-                            color: white;
-                        }
-                    }
-                }
-                &>.colors{
-                    margin-top: 30px;
-                &>.inputs{
-                    display: inline-flex;
-                    width: 100%;
-                    margin-top: 10px;
-                &>label{
-                    width: 100%;
-                    height: 6vh;
-                    text-align: center;
-                    display: inline-flex;
-                    justify-content: center;align-items: center;
-                &>input{
-                    width: 25px;
-                    height: 25px;
-                    position: relative;
-                }
-                &>.custom_radio{
-                    width: 25px;
-                    height: 25px;
-                    border-radius: 50%;
-                    cursor: pointer;
-                    display: inline-block;
-                    position: relative;
-                    right: 25px;
-                }
-                }
-              }
-            }
-            &>.cartprice{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                width: 170%;
-                gap: 20px;
-                margin-top: 20px;
-                &>button:first-child{
-                display: flex;  
-                width: 60%;
-                margin-top: 0;
-                align-items: center;
-                justify-content: center;
-                padding: 10px;
-                gap: 13px;
-                &>span{
-                    font-size: 15px;
-                }
-                }
-                &>button:nth-child(2){
-                width: 50%;
-                margin-top: 0;
-                background-color: white;
-                color:black;
-                border: 1px solid #3C4242;
-                border-radius: 8px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                }
-            }
-            &>hr{
-                margin-top: 30px;
-                width: 240%;
-            }
-            &>.pdshippinginfo{
-                margin-top: 20px;
-                width: 240%;
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                &>div{
-                    display: flex;
-                    align-items: center;
-                    gap: 7px;
-                }
-            }
-            }
-        }
-    }
-}
+    min-height: 130vh;
+    padding-top: 620px;
 }
