--- a/euphoria-front/src/components/ProductList/ListBestPrice/ListBestPrice.module.scss
+++ b/euphoria-front/src/components/ProductList/ListBestPrice/ListBestPrice.module.scss
@@ -15,14 +15,14 @@
 .container {
   width: 100%;
   height: auto;
-  margin: 80px 0px;
+  margin: 80px 0px !important;
   padding-bottom: 40px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
   & > .row {
-    width: 80%;
+    width: 90%;
     height: 90%;
     display: flex;
     align-items: flex-end;
