--- a/euphoria-front/src/components/ProductList/ListDescription/ListDescription.module.scss
+++ b/euphoria-front/src/components/ProductList/ListDescription/ListDescription.module.scss
@@ -13,14 +13,13 @@
 
 .container {
   width: 100%;
-  height: 900px;
+  height: 800px;
   display: flex;
   align-items: center;
   justify-content: center;
   & > .row {
-    margin-top: 30px;
-    width: 80%;
-    height: 85%;
+    // margin-top: 30px;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -60,6 +59,9 @@
         font-weight: 600;
         line-height: 33.5px;
         letter-spacing: 0.02em;
+      }
+      &>a:hover{
+        color: var(--color-charcoalGrey);
       }
       & > .col {
         width: 100%;
