--- a/euphoria-front/src/layout/navbar/global.scss
+++ b/euphoria-front/src/layout/navbar/global.scss
@@ -1,10 +1,10 @@
 nav {
-    .active {
-        background-color: #8A33FD !important;
-        color: white !important;
-    }
+  //   .active {
+  //     background-color: #8a33fd !important;
+  //     color: white !important;
+  //   }
 
-    .active:nth-child(1) {
-        background-color: inherit !important;
-    }
+  .active:nth-child(1) {
+    background-color: inherit !important;
+  }
 }
