--- a/euphoria-front/src/layout/navbar/homenavbar.module.css
+++ b/euphoria-front/src/layout/navbar/homenavbar.module.css
@@ -72,8 +72,8 @@ input::placeholder {
   text-decoration: none;
 }
 
-.active {
-  color: #3c4242;
+.list .active {
+  color: #3c4242 !important;
 }
 
 .elements {
@@ -91,12 +91,13 @@ input::placeholder {
   justify-content: center;
   padding: 0 10px;
   background: #f6f6f6;
-}
-
-.elem {
   color: #3c4242;
 }
 
+.elements .active {
+  background-color: #8a33fd !important;
+  color: white !important;
+}
 
 .resp {
   display: flex;
@@ -122,7 +123,7 @@ input::placeholder {
     top: -100vh;
     left: 0;
     background-color: white;
-    z-index: 999;
+    z-index: 99;
     transition: top 0.5s ease-in-out;
   }
 
